--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 <body>
   <h1>📜 Carnet de Prose</h1>
+  <audio autoplay loop hidden>
+    <source src="son/nuit.wav" type="audio/wav">
+  </audio>
+  
   <div id="contenu"></div>
 
   <script src="textes/listes.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+
 
