--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>📜 Carnet de Prose</h1>
+  <header>
+    <img src="images/lune.jpg" alt="lune" class="lune-banniere">
+    <div class="rayons-lune"></div>
+    <h1>📜 Carnet de Prose</h1>
+  </header>
+
+  
   <audio autoplay loop hidden>
     <source src="son/nuit.wav" type="audio/wav">
   </audio>
   
-  <div id="contenu"></div>
-
-  <script src="textes/listes.js"></script>
+  <div id="contenu"></div> 
   <script src="script.js"></script>
 </body>
 </html>
-
-
